--- a/index.html
+++ b/index.html
@@ -30,36 +30,89 @@
       text-align: left;
       width: 360px;
     }
+    #sensor-panel {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: rgba(255,255,255,0.95);
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      width: 200px;
+      text-align: left;
+    }
+    #camera-icon {
+      cursor: pointer;
+      font-size: 24px;
+      display: inline-block;
+      margin-top: 10px;
+    }
+    #camera-stream {
+      display: none;
+      margin-top: 10px;
+      width: 180px;
+      height: 135px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+    }
   </style>
 </head>
 <body>
+  <!-- 센서 패널 -->
+  <div id="sensor-panel">
+    <strong>센서 측정</strong><br>
+    체온: <input type="number" id="temp" step="0.1" value="36.5"><br>
+    심박수: <input type="number" id="hr" placeholder="심박수 측정" value="90">< br>
+    <button onclick="readSensors()">센서에서 불러오기</button><br>
+    <div id="camera-icon" onclick="toggleCamera()">📷 카메라 보기</div>
+    <video id="camera-stream" autoplay></video>
+  </div>
+
   <h1>감기 진단 및 처방 시뮬레이터</h1>
   <p>증상을 입력하세요 (예: 기침, 두통 등)</p>
   <textarea id="symptoms" rows="3" cols="40" placeholder="증상을 입력하세요"></textarea><br>
-  
-  <p>체온 입력 (또는 라즈베리파이 센서 자동 측정)</p>
-  <input type="number" id="temp" step="0.1" placeholder="예: 37.8">
-  <button onclick="readSensor()">센서에서 불러오기</button><br><br>
-
   <button onclick="diagnose()">진단 및 처방</button>
-
   <div id="result"></div>
 
   <script>
-    async function readSensor() {
+    // 센서 읽기
+    async function readSensors() {
       try {
-        const res = await fetch('http://raspberrypi.local:5000/temperature');
+        const res = await fetch('http://raspberrypi.local:5000/sensors'); // JSON 예: {temperature:37.2, heartRate:72}
         const data = await res.json();
         document.getElementById('temp').value = data.temperature.toFixed(1);
-        alert(`센서에서 체온 ${data.temperature.toFixed(1)}℃를 읽었습니다`);
-      } catch (e) {
+        document.getElementById('hr').value = data.heartRate;
+        alert(`센서 측정 완료: 체온 ${data.temperature.toFixed(1)}℃, 심박수 ${data.heartRate} bpm`);
+      } catch(e) {
         alert("센서 데이터를 불러올 수 없습니다. 직접 입력해주세요.");
       }
     }
 
+    // 카메라 토글
+    let cameraActive = false;
+    let cameraStream = null;
+    function toggleCamera() {
+      const cam = document.getElementById('camera-stream');
+      if (!cameraActive) {
+        navigator.mediaDevices.getUserMedia({ video: true })
+          .then(stream => {
+            cam.srcObject = stream;
+            cam.style.display = "block";
+            cameraStream = stream;
+            cameraActive = true;
+          })
+          .catch(err => { alert("카메라 접근이 불가합니다."); });
+      } else {
+        cameraStream.getTracks().forEach(track => track.stop());
+        cam.style.display = "none";
+        cameraActive = false;
+      }
+    }
+
+    // 진단 및 처방
     function diagnose() {
       const sym = document.getElementById('symptoms').value.toLowerCase();
-      const temp = parseFloat(document.getElementById('temp').value);
+      const temp = parseFloat(document.getElementById('temp').value) || 36.5;
       const resDiv = document.getElementById('result');
 
       if (!sym.trim() && isNaN(temp)) {
@@ -70,12 +123,11 @@
       let fever = temp >= 37.5;
       let result = "<h2>진단 결과</h2>";
 
-      // 정규식으로 비슷한 표현까지 인식
       const hasCough = /(기침|기침이 나|기침나)/.test(sym);
-      const hasSore = /(인후통|목이 아프|목 아파|목 아프|목이 따갑|목 따갑)/.test(sym);
+      const hasSore = /(인후통|목이 아프|목 아파|목이 따갑|목 따갑)/.test(sym);
       const hasNose = /(콧물|코막힘|코가 막|코 막)/.test(sym);
       const hasBody = /(몸살|근육통|몸이 아프|근육이 아프|몸 아파|근육 아파)/.test(sym);
-      const hasHeadache = /(두통|머리가 아프|머리 아파|머리 아프)/.test(sym);
+      const hasHeadache = /(두통|머리가 아프|머리 아파)/.test(sym);
 
       const count = [hasCough, hasSore, hasNose, hasBody, hasHeadache, fever].filter(x=>x).length;
 
@@ -86,30 +138,14 @@
       }
 
       result += "🩺 감기 가능성이 높습니다.<br><br><strong>임시 처방 내용</strong><br><br>";
+      if (fever) result += "🌡️ 해열제: 아세트아미노펜 500mg — 1정씩, 1일 3회 (식후)<br>";
+      if (hasCough) result += "💨 기침약: 덱스트로메토르판 10mL — 1일 3회<br>";
+      if (hasNose) result += "🤧 비충혈 완화제: 슈도에페드린 1정 — 1일 2회<br>";
+      if (hasSore) result += "🗣️ 인후통 완화제: 트라스트 목캔디 또는 인후스프레이 — 필요 시 1회<br>";
+      if (hasBody) result += "💊 근육통 완화제: 이부프로펜 200mg — 1정씩, 1일 3회<br>";
+      if (hasHeadache) result += "🧠 두통 완화제: 아세트아미노펜 병용<br>";
 
-      if (fever) {
-        result += "🌡️ 해열제: 아세트아미노펜(타이레놀정 500mg) — 1정씩, 1일 3회 (식후 30분)<br>";
-      }
-      if (hasCough) {
-        result += "💨 기침약: 덱스트로메토르판(벤포드시럽) — 10mL씩, 1일 3회<br>";
-      }
-      if (hasNose) {
-        result += "🤧 비충혈 완화제: 슈도에페드린(페니라민정) — 1정씩, 1일 2회<br>";
-      }
-      if (hasSore) {
-        result += "🗣️ 인후통 완화제: 트라스트 목캔디 또는 인후스프레이 — 필요 시 1회 사용<br>";
-      }
-      if (hasBody) {
-        result += "💊 근육통 완화제: 이부프로펜(이부펜정 200mg) — 1정씩, 1일 3회<br>";
-      }
-      if (hasHeadache) {
-        result += "🧠 두통 완화제: 아세트아미노펜 병용 — 위 해열제와 동일<br>";
-      }
-
-      result += "<br><strong>복용 시 주의사항:</strong><br>";
-      result += "- 8시간 간격 유지 및 과량 복용 금지<br>";
-      result += "- 3일 이상 지속 시 병원 방문<br>";
-      result += "- 수분을 충분히 섭취하고 따뜻한 휴식 필요<br>";
+      result += "<br><strong>복용 시 주의사항:</strong><br>- 8시간 간격 유지<br>- 3일 이상 지속 시 병원 방문<br>- 수분 섭취 및 휴식";
 
       resDiv.innerHTML = result;
     }
